src/objects/ProjectSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>SurMarginYearToDate__c</fullName>
        <label>SurMarginYearToDate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Project Snapshots</relationshipLabel>
        <relationshipName>Project_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalSpend__c</fullName>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalWorkingCapital__c</fullName>
        <formula>ARTotal__c + UnbilledTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Working Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled0to30Comments__c</fullName>
        <label>Unbilled 0 to 30 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unbilled0to30__c</fullName>
        <label>Unbilled 0 to 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled0to60Comments__c</fullName>
        <label>Unbilled 0 to 60 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unbilled0to60Original__c</fullName>
        <formula>Unbilled0to30__c +  Unbilled31to60__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbilled 0 to 60 Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled0to60__c</fullName>
        <formula>Unbilled0to30__c +  Unbilled31to60__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbilled 0 to 60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled181PlusComments__c</fullName>
        <label>Unbilled 181 Plus Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unbilled181Plus__c</fullName>
        <label>Unbilled 181 Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled31to60Comments__c</fullName>
        <label>Unbilled 31 to 60 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unbilled31to60Original__c</fullName>
        <label>Unbilled 31 to 60 Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled31to60__c</fullName>
        <label>Unbilled 31 to 60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled61PlusComments__c</fullName>
        <label>Unbilled 61 Plus Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unbilled61Plus__c</fullName>
        <formula>GrossRevenueITD__c - ( ARTotal__c +  Unbilled0to30__c + Unbilled31to60__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbilled 61 Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled91Plus__c</fullName>
        <formula>GrossRevenueITD__c - ( ARTotal__c +  Unbilled0to30__c + Unbilled31to60__c + Unbilled61to90__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbilled 91 Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnbilledDaysActual__c</fullName>
        <formula>Unbilled61to90__c /( AR0to90__c /91)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbilled Days Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnbilledTotalComments__c</fullName>
        <label>Unbilled Total Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UnbilledTotal__c</fullName>
        <label>Unbilled Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project Snapshot</label>
    <nameField>
        <label>Project Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>